[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/Todot/Src/Scripts/ListTitle.gd" type="Script" id=1]
[ext_resource path="res://addons/Todot/Roboto-Light.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 2 )

[node name="ListTitle" type="Button"]
margin_right = 280.0
margin_bottom = 44.0
rect_min_size = Vector2( 280, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
clip_text = true
align = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_bottom = 50.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 260, 40 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HBoxContainer/Control"]
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 260, 40 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/Control"]
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 260, 40 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_ListTitle_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_ListTitle_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ListTitle_mouse_exited"]
